tests/snapshots/regions_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="270.575" height="141.490" viewBox="-28.600 -36.484 270.575 141.490" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>marked_regions</title>
  <rect x="-28.600" y="-36.484" width="270.575" height="141.490" fill="#FFFFFF"/>
  <g>
    <rect x="27.881" y="-13.656" width="114.938" height="112.662" rx="5.000" fill="#FFFF00" stroke="#FF8000" stroke-width="1" opacity="0.200"/>
    <text x="52.681" y="-15.656" text-anchor="middle" fill="#000000">encoding</text>
    <rect x="27.881" y="-13.656" width="157.613" height="112.662" fill="none" stroke="#BF0040" stroke-width="1" stroke-dasharray="3 2"/>
    <text x="55.781" y="-22.484" text-anchor="middle" fill="#000000">full pass</text>
    <line x1="0.000" y1="0.000" x2="213.375" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="3.500" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="226.675" y="3.500" text-anchor="middle" fill="#000000">out</text>
    <line x1="0.000" y1="28.450" x2="213.375" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="31.950" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="226.675" y="31.950" text-anchor="middle" fill="#000000">out</text>
    <line x1="0.000" y1="56.900" x2="213.375" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="60.400" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="226.675" y="60.400" text-anchor="middle" fill="#000000">out</text>
    <line x1="0.000" y1="85.350" x2="213.375" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="88.850" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="226.675" y="88.850" text-anchor="middle" fill="#000000">out</text>
    <rect x="75.350" y="-10.000" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="85.350" y="3.500" text-anchor="middle" fill="#000000">H</text>
    <rect x="75.350" y="18.450" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="85.350" y="31.950" text-anchor="middle" fill="#000000">H</text>
    <rect x="75.350" y="46.900" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="85.350" y="60.400" text-anchor="middle" fill="#000000">H</text>
    <line x1="128.025" y1="0.000" x2="128.025" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="128.025" cy="0.000" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="128.025" cy="85.350" r="4.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <line x1="124.042" y1="85.350" x2="132.008" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="128.025" y1="89.333" x2="128.025" y2="81.367" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="170.700" y1="28.450" x2="170.700" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="170.700" cy="28.450" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="170.700" cy="56.900" r="4.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <line x1="166.717" y1="56.900" x2="174.683" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="170.700" y1="60.883" x2="170.700" y2="52.917" fill="none" stroke="#000000" stroke-width="1"/>
    <rect x="160.700" y="75.350" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="170.700" y="88.850" text-anchor="middle" fill="#000000">H</text>
  </g>
</svg>
