tests/snapshots/shor_nutshell_typst.snap
---
source: tests/snapshots.rs
---
#set page(width: auto, height: auto, margin: 6pt, fill: white)
#import "@preview/quill:0.8.0" as quill

#quill.quantum-circuit(
  wires: 7,
  row-spacing: 12.000pt,
  column-spacing: 12.000pt,
  scale: 100.000%,
  gate-padding: 5.000pt,
  fill: white,
  quill.setwire(1, stroke: black),
  7,
  quill.setwire(2, stroke: black),
  2,
  [\ ],
  quill.setwire(1, stroke: black),
  7,
  quill.setwire(2, stroke: black),
  2,
  [\ ],
  quill.setwire(1, stroke: black),
  7,
  quill.setwire(2, stroke: black),
  2,
  [\ ],
  quill.setwire(1, stroke: black),
  7,
  quill.setwire(2, stroke: black),
  2,
  [\ ],
  quill.setwire(1, stroke: black),
  9,
  [\ ],
  quill.setwire(1, stroke: black),
  9,
  [\ ],
  quill.setwire(1, stroke: black),
  9,
  quill.lstick(text("|0>"), x: 0, y: 0),
  quill.rstick(text("phase"), x: 8, y: 0),
  quill.lstick(text("|0>"), x: 0, y: 1),
  quill.rstick(text("phase"), x: 8, y: 1),
  quill.lstick(text("|0>"), x: 0, y: 2),
  quill.rstick(text("phase"), x: 8, y: 2),
  quill.lstick(text("|0>"), x: 0, y: 3),
  quill.rstick(text("phase"), x: 8, y: 3),
  quill.lstick(text("|1>"), x: 0, y: 4),
  quill.rstick(text("a^x mod N"), x: 8, y: 4),
  quill.lstick(text("|1>"), x: 0, y: 5),
  quill.rstick(text("a^x mod N"), x: 8, y: 5),
  quill.lstick(text("|1>"), x: 0, y: 6),
  quill.rstick(text("a^x mod N"), x: 8, y: 6),
  quill.gate(text("H"), x: 2, y: 0),
  quill.gate(text("H"), x: 2, y: 1),
  quill.gate(text("H"), x: 2, y: 2),
  quill.gate(text("H"), x: 2, y: 3),
  quill.ctrl(6, open: false, x: 3, y: 0, fill: rgb("#DDEEFF")),
  quill.ctrl(0, open: false, x: 3, y: 1, fill: rgb("#DDEEFF")),
  quill.ctrl(0, open: false, x: 3, y: 2, fill: rgb("#DDEEFF")),
  quill.ctrl(0, open: false, x: 3, y: 3, fill: rgb("#DDEEFF")),
  quill.mqgate(text("modexp"), n: 3, x: 3, y: 4, fill: rgb("#DDEEFF")),
  quill.slice(n: 7, x: 4, y: 0, stroke: (paint: black, thickness: 0.7pt, dash: "dashed")),
  quill.mqgate(text("inverse QFT"), n: 4, x: 5, y: 0, fill: yellow),
  quill.gate(text("bits"), x: 6, y: 0, width: 20.000pt, radius: (top-right: 999pt, bottom-right: 999pt)),
  quill.gate(text("bits"), x: 6, y: 1, width: 20.000pt, radius: (top-right: 999pt, bottom-right: 999pt)),
  quill.gate(text("bits"), x: 6, y: 2, width: 20.000pt, radius: (top-right: 999pt, bottom-right: 999pt)),
  quill.gate(text("bits"), x: 6, y: 3, width: 20.000pt, radius: (top-right: 999pt, bottom-right: 999pt)),
  quill.mqgate(box([#text(size: 48.000pt, fill: black, "{") #h(3pt) #text("period register")]), n: 4, x: 7, y: 0, fill: white, stroke: none),
  quill.mqgate(box([#text(size: 36.000pt, fill: black, "{") #h(3pt) #text("value register")]), n: 3, x: 5, y: 4, fill: white, stroke: none),
)
