tests/snapshots/start_and_end_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="215.500" height="118.850" viewBox="-22.400 -16.000 215.500 118.850" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>start_and_end</title>
  <rect x="-22.400" y="-16.000" width="215.500" height="118.850" fill="#FFFFFF"/>
  <g>
    <line x1="0.000" y1="0.000" x2="85.350" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="128.025" y1="0.000" x2="170.700" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-10.200" y="3.500" text-anchor="middle" fill="#000000">a0</text>
    <text x="180.900" y="3.500" text-anchor="middle" fill="#000000">a1</text>
    <line x1="0.000" y1="28.450" x2="128.025" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-10.200" y="31.950" text-anchor="middle" fill="#000000">b0</text>
    <line x1="42.675" y1="56.900" x2="128.025" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="42.675" y1="85.350" x2="170.700" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="180.900" y="88.850" text-anchor="middle" fill="#000000">d1</text>
    <line x1="42.675" y1="60.599" x2="42.675" y2="53.201" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="26.275" y="60.400" text-anchor="middle" fill="#000000">late</text>
    <rect x="32.675" y="-10.000" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="42.675" y="3.500" text-anchor="middle" fill="#000000">H</text>
    <line x1="85.350" y1="3.698" x2="85.350" y2="-3.698" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="104.850" y="3.500" text-anchor="middle" fill="#000000">pause</text>
    <line x1="42.675" y1="89.049" x2="42.675" y2="81.651" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="26.275" y="88.850" text-anchor="middle" fill="#000000">late</text>
    <line x1="85.350" y1="28.450" x2="85.350" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="85.350" cy="56.900" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="85.350" cy="28.450" r="4.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <line x1="81.367" y1="28.450" x2="89.333" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="85.350" y1="32.433" x2="85.350" y2="24.467" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="128.025" y1="32.149" x2="128.025" y2="24.752" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="144.425" y="31.950" text-anchor="middle" fill="#000000">done</text>
    <line x1="128.025" y1="3.698" x2="128.025" y2="-3.698" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="105.425" y="3.500" text-anchor="middle" fill="#000000">resume</text>
    <rect x="75.350" y="75.350" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="85.350" y="88.850" text-anchor="middle" fill="#000000">H</text>
    <line x1="128.025" y1="60.599" x2="128.025" y2="53.201" fill="none" stroke="#000000" stroke-width="1"/>
  </g>
</svg>
