tests/snapshots/start_and_end_typst.snap
---
source: tests/snapshots.rs
---
#set page(width: auto, height: auto, margin: 6pt, fill: white)
#import "@preview/quill:0.8.0" as quill

#quill.quantum-circuit(
  wires: 4,
  row-spacing: 12.000pt,
  column-spacing: 12.000pt,
  scale: 100.000%,
  gate-padding: 5.000pt,
  fill: white,
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(0, stroke: black),
  1,
  quill.setwire(1, stroke: black),
  1,
  [\ ],
  quill.setwire(1, stroke: black),
  4,
  quill.setwire(0, stroke: black),
  1,
  [\ ],
  quill.setwire(0, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(0, stroke: black),
  1,
  [\ ],
  quill.setwire(0, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  3,
  quill.lstick(text("a0"), x: 0, y: 0),
  quill.rstick(text("a1"), x: 4, y: 0),
  quill.lstick(text("b0"), x: 0, y: 1),
  quill.rstick(text("d1"), x: 4, y: 3),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 1, y: 2, label: (content: text("late"), pos: left)),
  quill.gate(text("H"), x: 1, y: 0),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 2, y: 0, label: (content: text("pause"), pos: right)),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 1, y: 3, label: (content: text("late"), pos: left)),
  quill.ctrl(-1, open: false, x: 2, y: 2),
  quill.targ(x: 2, y: 1),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 3, y: 1, label: (content: text("done"), pos: right)),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 3, y: 0, label: (content: text("resume"), pos: left)),
  quill.gate(text("H"), x: 2, y: 3),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 3, y: 2),
)
