tests/snapshots/styling_latex.snap
---
source: tests/snapshots.rs
---
\documentclass[tikz,border=6pt]{standalone}
\usepackage{tikz}
\usepackage{hyperref}
\usetikzlibrary{decorations.pathreplacing,shapes.geometric}
\definecolor{qrab1F4E79}{HTML}{1F4E79}
\definecolor{qrabF7F8FC}{HTML}{F7F8FC}
\definecolor{qrabFCE8A2}{HTML}{FCE8A2}
\begin{document}
\begin{tikzpicture}[line cap=round,line join=round,font=\sffamily,scale=1.100,rotate=90]
% circuit: styled_controls
  \fill[qrabF7F8FC] (-1.700,-3.600) rectangle (11.900,1.200);
  \draw[color=qrab1F4E79] (0.000,-0.000) -- (8.840,-0.000);
  \draw[color=qrab1F4E79] (8.840,-0.035) -- (10.200,-0.035);
  \draw[color=qrab1F4E79] (8.840,0.035) -- (10.200,0.035);
  \node[anchor=east] at (0,-0.000) {\texttt{|0>}};
  \draw[color=qrab1F4E79] (0.000,-1.200) -- (10.200,-1.200);
  \node[anchor=east] at (0,-1.200) {\texttt{|0>}};
  \draw[color=qrab1F4E79] (0.000,-2.400) -- (10.200,-2.400);
  \node[anchor=east] at (0,-2.400) {\texttt{|0>}};
  \node[draw=qrab1F4E79,fill=qrabFCE8A2,circle,minimum width=24.000pt,minimum height=24.000pt] at (1.700,-0.000) {\texttt{H}};
  \draw[color=blue,dashed,opacity=0.650] (3.400,-0.000) -- (3.400,-2.400);
  \draw[draw=blue,fill=green,dashed,opacity=0.650] (3.400,-1.200) circle[radius=2.2pt];
  \node[draw=blue,fill=green,minimum width=30.000pt,minimum height=3.103cm,dashed,opacity=0.650] at (3.400,-1.200) {\href{https://example.com/qrab?gate=U}{\texttt{U}}};
  \draw[color=teal] (5.100,-0.000) -- (5.100,-1.200);
  \draw[draw=teal,fill=white] (5.100,-0.000) circle[radius=2.2pt];
  \node[draw=teal,fill=white,circle,minimum width=20.000pt,minimum height=20.000pt] at (5.100,-1.200) {\texttt{+}};
  \node[draw=red,fill=yellow,circle,minimum width=22.000pt,minimum height=22.000pt] at (5.100,-2.400) {\texttt{theta/2}};
  \draw[color=red] (6.800,-0.000) -- (6.800,-2.400);
  \draw[color=red] (6.690,-0.110) -- (6.910,0.110) (6.690,0.110) -- (6.910,-0.110);
  \draw[color=red] (6.690,-2.510) -- (6.910,-2.290) (6.690,-2.290) -- (6.910,-2.510);
  \draw[draw=blue,fill=yellow] (8.149,-0.351) -- (8.500,-0.351) arc[start angle=-90,end angle=90,radius=0.351] -- (8.149,0.351) -- cycle;
  \node at (8.500,-0.000) {\texttt{Z}};
\end{tikzpicture}
\end{document}
